apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd
  namespace: argocd

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik


  rules:
  - host: argocd.bvrinfra.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: argocd-server
            port:
              number: 80
