apps/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  namespace: monitoring

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik


  rules:
  - host: grafana.bvrinfra.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: grafana
            port:
              number: 80
